--- a/maame portfolio/media.css
+++ b/maame portfolio/media.css
@@ -5,7 +5,7 @@
     }
 
     nav ul{
-        margin-left: 10px;
+        gap: 5px'
     }
 
 
@@ -53,7 +53,7 @@
 
     .service3{
         margin-top: 20px;
-        margin-left: 4.5rem;
+        margin-left: 3rem;
     }
 
     .service4{
@@ -65,6 +65,10 @@
     .service4 p{
         margin-left: 10px;
         margin-right: 10px;
+    }
+
+    .service4 img{
+        width: 300px;
     }
 
     .about2{
