--- a/maame portfolio/media.css
+++ b/maame portfolio/media.css
@@ -5,7 +5,12 @@
     }
 
     nav ul{
-        gap: 5px'
+        gap: 5px;
+        margin-right: 20px;
+    }
+
+    nav ul li a{
+        padding: 0;
     }
 
 
