--- a/maame portfolio/media.css
+++ b/maame portfolio/media.css
@@ -11,6 +11,7 @@
 
     nav ul li a{
         padding: 0;
+        font-size: 10px;
     }
 
 
@@ -19,7 +20,7 @@
     }
 
     .rich h1{
-        padding-top: 300px;
+        padding-top: 200px;
     }
 
     /* footer{
