--- a/maame portfolio/media.css
+++ b/maame portfolio/media.css
@@ -1,7 +1,6 @@
 @media screen and (max-width: 430px){
     header{
-        display: block;
-        height: 100px;
+        height: 50px;
     }
 
     nav ul{
@@ -9,9 +8,13 @@
         margin-right: 20px;
     }
 
+    .logo{
+        font-size: 25px;
+    }
+
     nav ul li a{
         padding: 0;
-        font-size: 10px;
+        font-size: 16px;
     }
 
 
